# EEG

./: alpha_detect.py  eeg_gui.py  stable_freq.py  target_fragment_analysis.py  worker.py
.gui_cache/: result.json
cpp_gui/: CMakeLists.txt  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  signalview.cpp  signalview.h
docs/: CODE_MAP.md  DEVELOPER_GUIDE.md  QA.md  USER_GUIDE.md
results/: target_coefficients.csv
